# Spatula

./: Cargo.toml  Dockerfile
.github/workflows/: build-container.yml
src/: data.rs  main.rs
src/emoji/: emoji_commands.rs  mod.rs
src/music/: events.rs  mod.rs  playlists.rs  queue.rs
src/music/commands/: mod.rs  play.rs  queue.rs  skip.rs
src/tasks/: mod.rs  twitter.rs
src/tasks/config/: discord_channels.in
src/twitter/: mod.rs
src/twitter/config/: discord_channels.in  twitter_handles.in
