[package]
name = "spatula"
version = "0.1.0"
authors = ["Nicholas Guarino <me@ndguarino.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9", features = ["attributes", "tokio02", "tokio1"] }
egg-mode = "0.15"
futures = "0.3"
serenity = "0.10"
