[package]
name = "spatula"
version = "0.2.0"
authors = ["Nicholas Guarino <me@ndguarino.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.9", features = ["attributes", "tokio02", "tokio1", "unstable"] }
dotenv = "0.15"
egg-mode = "0.15"
futures = "0.3"
tracing = "0.1"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-subscriber = "0.2"
reqwest = { version = "0.10", features = ["rustls-tls", "json"], default-features = false }
base64 = "0.13"
bytes = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = "0.8"
parking_lot = "0.11"
dashmap = "4.0"

[dependencies.serenity]
version = "0.10"
features = ["cache", "standard_framework", "voice", "rustls_backend"]

[dependencies.songbird]
version = "0.1"
features = ["builtin-queue"]